<resources>
    <string name="app_name" translatable="false">AD2</string>
    <string name="toolbar_search_hint">Search by name&#8230;</string>
    <string name="heroes">Heroes</string>
    <string name="items">Items</string>
    <string name="news">News</string>
    <string name="tournaments">Tournaments</string>
    <string name="games">Games</string>
    <string name="streams">Streams</string>
    <string name="setting">Setting</string>
    <string name="setting_category_setting_title">APP SETTING</string>
    <string name="setting_account_key" translatable="false">setting_account_toggle_key</string>
    <string name="setting_log_key" translatable="false">setting_show_log_key</string>
    <string name="setting_news_key" translatable="false">setting_news_with_image_key</string>
    <string name="setting_about_key" translatable="false">pref_about_key</string>
    <string name="setting_private_policy_key" translatable="false">setting_private_policy_key</string>
    <string name="setting_account_title">Display your account</string>
    <string name="setting_log_title">Panel with log-text</string>
    <string name="setting_log_summary">on main screen</string>
    <string name="setting_account_summary">Show your friends</string>
    <string name="setting_about_title" translatable="false">About Dota 2</string>
    <string name="setting_private_policy_title" translatable="false">Private Policy</string>
    <string name="setting_high_quality_desc_on">On</string>
    <string name="setting_high_quality_desc_off">Off</string>
    <string name="setting_about_summary" translatable="false">v%1$s</string>
    <string name="setting_donate_days_remains" translatable="false">premium %d days remains</string>
    <string name="setting_contact_title">Contact us</string>
    <string name="setting_contact_key" translatable="false">contact_us_key</string>
    <string name="setting_contact_summary">Bugs? Errors? Contribution?</string>
    <string name="setting_theme_title">Change theme</string>
    <string name="setting_theme_key" translatable="false">setting_theme_key</string>
    <string name="setting_theme_default" translatable="false">GRAY</string>
    <string name="setting_category_about_title">ABOUT APP</string>
    <string name="setting_tell_friend_title">Tell a friend</string>
    <string name="setting_tell_friend_summary">Have you %1$d friends? Do not you?</string>
    <string name="setting_tell_friend_key" translatable="false">tell_friend_key</string>
    <string name="setting_tell_friend_message" translatable="false">https://goo.gl/au2HTE</string>
    <string name="setting_theme_gray" translatable="false">Gray</string>
    <string name="setting_theme_white" translatable="false">White</string>
    <string name="setting_theme_dark" translatable="false">Dark</string>
    <string name="dialog_response_download">Download</string>
    <string name="dialog_response_set_ringtone">Set on ringtone</string>
    <string name="license_text1" translatable="false">This Freeware License is a binding legal agreement between the individual who downloads the software (You) and the Licensor.</string>
    <string name="license_text10" translatable="false">6. Your license to use the software shall be revocable by the Licensor upon written notice to you. This license shall automatically terminate upon your violation of the terms hereof or upon your use of the software beyond the scope of the license provided herein.</string>
    <string name="license_text11" translatable="false">7. Use within the scope of this license is free of charge and no royalty or licensing fees shall be payable by you. Use beyond the scope of this license shall constitute copyright infringement. This license shall be effective and bind you upon your downloading of the software.</string>
    <string name="license_text12" translatable="false">8. You accept the software on an AS IS and with all faults basis. No representations and warranties are made to you regarding any aspect of the software.</string>
    <string name="license_text13" translatable="false">9. THE LICENSOR HEREBY DISCLAIMS ANY AND ALL WARRANTIES, EXPRESS OR IMPLIED, RELATIVE TO THE SOFTWARE, INCLUDING BUT NOT LIMITED TO ANY WARRANTY OF FITNESS FOR A PARTICULAR PURPOSE OR MERCHANTIBILITY. LICENSOR SHALL NOT BE LIABLE OR RESPONSIBLE FOR ANY DAMAGES, INJURIES OR LIABILITIES CAUSED DIRECTLY OR INDIRECTLY FROM THE USE OF THE SOFTWARE, INCLUDING BUT NOT LIMITED TO INCIDENTAL, CONSEQUENTIAL OR SPECIAL DAMAGES.</string>
    <string name="license_text14" translatable="false">10. This Freeware License shall be interpreted under the laws of Italy. You agree that all controversies pertaining to the software and/or this Freeware Agreement shall be brought in the courts of Rome. You hereby submit to the jurisdictions of such court.</string>
    <string name="license_text15" translatable="false">11. Licensor\'s failure to enforce any rights here under or its copyright in the software shall not be construed as amending this agreement or waiving any of Licensor\'s rights hereunder or under any provision of state of national law.</string>
    <string name="license_text16" translatable="false">12. Consent to Use of Data: You agree that Application Provider may collect and use technical data and related information, including but not limited to technical information about Your device, system and application software, and peripherals, that is gathered periodically to facilitate the provision of software updates,product support and other services to You (if any) related to the Licensed Application. Application Provider may use this information, as long as it is in a form that does not personally identify You, to improve its products or to provide services or technologies to You.</string>
    <string name="license_text2" translatable="false">THIS SOFTWARE IS COPYRIGHTED AND THE OWNER OF THE COPYRIGHT CLAIMS ALL EXCLUSIVE RIGHTS TO SUCH SOFTWARE, EXCEPT AS LICENSED TO USERS HEREUNDER AND SUBJECT TO STRICT COMPLIANCE WITH THE TERMS OF THIS LICENSE</string>
    <string name="license_text3" translatable="false">Even though a license fee is not paid for use of such Freeware, it does not mean that there are not conditions for using such Freeware. As a condition for granting you a license to use Freeware programs that are available through this site, you agree to all of the following terms and conditions. You are deemed to have read, understand, and have accepted all such terms and conditions upon executing a download of any Freeware program.\nIf you fail to abide by any of the terms and conditions set forth herein, your license to use such Freeware shall be immediately and automatically revoked, without any notice or other action by the Copyright Owner.</string>
    <string name="license_text4" translatable="false">TERMS AND CONDITIONS</string>
    <string name="license_text5" translatable="false">1. You are granted a non-exclusive license to use the Downloaded Software subject to your compliance with all of the terms and conditions of this Freeware License</string>
    <string name="license_text6" translatable="false">2. You may only use the software on a device that you own, lease or control.</string>
    <string name="license_text7" translatable="false">3. You are only granted a license for the machine-readable, object code portion of the software. You will not modify, enhance, reverse engineer or otherwise alter the software from its current state.</string>
    <string name="license_text8" translatable="false">4. You may not distribute, copy, publish, assign, sell, bargain, convey, transfer, pledge, lease or grant any further rights to use the software.</string>
    <string name="license_text9" translatable="false">5. You will not have any proprietary rights in and to the software. You acknowledge and agree that the Licensor retains all copyrights and other proprietary rights in and to the software.</string>
    <string name="license_title" translatable="false">AD2 Freeware license terms and conditions</string>
    <string name="all_new_version">new version</string>
    <string name="all_check_update">check update</string>
    <string name="all_error_internet">Can\'t loading without internet connection</string>
    <string name="update_ok">no need to update</string>
    <string name="main_press_again_to_exit">press again to exit</string>
    <string name="hero_info">info</string>
    <string name="hero_sound">sounds</string>
    <string name="hero_guide">guide</string>
    <string name="hero_response_ringtone_set">Ringtone has been set! Probably!</string>
    <string name="hero_personal_tip_manta_descr">it shows can be this ability used by illusions or not</string>
    <string name="starting_items">Starting items</string>
    <string name="easy_to_win_heroes">Best versus heroes</string>
    <string name="hard_to_win_heroes">Worst versus heroes</string>
    <string name="setting_subscription_key" translatable="false">pref_month_key</string>
    <string name="compare_win_rate" translatable="false">Win Rate</string>
    <string name="setting_subscription_summary">Ready to take the next step?</string>
    <string name="setting_subscription_title">Subscription</string>
    <string name="all_grand_permission">Please Grant Permissions</string>
    <string name="all_enable">ENABLE</string>
    <string name="log_in">Log In</string>
    <string name="all_logout" translatable="false">logout complete</string>
    <string name="heart" translatable="false">heart</string>
    <string name="hero_fragment_notes">Notes</string>
    <string name="hero_fragment_story">Story</string>
    <string name="hero_fragment_params">Parameters</string>
    <string name="item_hero_personal_description_talents">Talents</string>
    <string name="hero_fragment_bio">Bio</string>
    <string name="hero_fragment_trivia">Trivia</string>
    <string name="hero_fragment_description">Description</string>
    <string name="tips">Tips</string>
    <string name="abilities">Ability : %s</string>
    <string name="lore">Lore</string>
    <string name="open_file">Open</string>
    <string name="hero_responses_fragment_download_first">You should download sound first</string>
    <string name="hero_responses_sound_already_downloaded">Sound already downloaded</string>
    <string name="hero_responses_open_folder_with" translatable="false">Open folder with</string>
    <string name="all_something_went_wrong" translatable="false">Oops! Something went wrong.</string>
    <string name="notification_game_title">Game Started</string>
    <string name="notification_game_info" translatable="false">Game</string>
    <string name="item_hero_personal_info_desc">Information</string>
    <string name="item_hero_personal_trivia_desc">Trivia</string>
    <string name="all_open_folder">Open</string>
    <string name="responses_fragment_sound_downloaded">Sound downloaded</string>
    <string name="dialog_donate_annual">ANNUAL</string>
    <string name="dialog_donate_subscription">SUBSCRIPTION</string>
    <string name="dialog_rate_me_never">Never</string>
    <string name="dialog_rate_me_later">LATER</string>
    <string name="dialog_rate_me_title">Hello, we need your help!</string>
    <string name="setting_news_title">Image for news</string>
    <string name="setting_news_summary" translatable="false">Wubalubadubdub!</string>
    <string name="setting_category_setting_key" translatable="false">setting_category_setting_key</string>
    <string name="setting_category_about_key" translatable="false">setting_category_about_key</string>
    <string name="setting_current_day" translatable="false">setting_current_day</string>
    <string name="desc_strength" translatable="false">strength</string>
    <string name="desc_intelligence" translatable="false">intellect</string>
    <string name="desc_agility" translatable="false">Agility</string>
</resources>