<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    key = имя параметра хранящейсего в SharedPreferences
    entries = список элементов в виде списка вариантов в GUI
    entryValues = значение выбранного элемента будет храниться в SharedPreferences
    title = заголовок отображаеммый в GUI
    summary = описание отображаеммое в GUI
    persistent = если true то сохранение значения после каждого его изменения
    default = значение выбранное по умолчанию
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="@string/setting_category_setting_key"
        app:title="@string/setting_category_setting_title">
        <Preference
            app:defaultValue="@string/setting_theme_default"
            app:iconSpaceReserved="false"
            app:key="@string/setting_theme_key"
            app:title="@string/setting_theme_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/setting_log_key"
            app:summary="@string/setting_log_summary"
            app:title="@string/setting_log_title" />
        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/setting_news_key"
            app:summary="@string/setting_news_summary"
            app:title="@string/setting_news_title" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="@string/setting_category_about_key"
        app:title="@string/setting_category_about_title">
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/setting_about_key"
            app:summary="@string/setting_about_summary"
            app:title="@string/setting_about_title" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/setting_tell_friend_key"
            app:summary="@string/setting_tell_friend_summary"
            app:title="@string/setting_tell_friend_title" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/setting_contact_key"
            app:summary="@string/setting_contact_summary"
            app:title="@string/setting_contact_title" />
    </PreferenceCategory>
    <Preference
        app:isPreferenceVisible="false"
        app:iconSpaceReserved="false"
        app:key="@string/setting_current_day"/>
</PreferenceScreen>