<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="var"
            type="n7.ad2.ui.setting.LicensesActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/setting_tell_friend_title"
                android:src="@mipmap/ic_launcher" />

            <TextView

                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/license_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/license_text1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/license_text2"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/license_text3"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/license_text4"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/license_text5"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text6"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text7"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text8"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text9"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text10"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text11"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text12"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text13"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text14"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text15"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="?android:textColorSecondary"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/license_text16"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</layout>